test/expected/explain_main_f2c_i.out
explain int main( char, char )
                  ^
19: error: invalid main() first parameter type "char"; must be "int" or a typedef thereof
